test/fails/bad_casts/functions3.lgl
type a is float[2];

canon a f(a x) { // cannot canonicalize a map to the identity
    return x + [1., 1.];
}

void main() {
    print 1;
}